# Duck-Contest

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
src/: main.py
src/api/: hands.py  main.py  root.py  user.py
src/crud/: refresh_token.py  user.py
src/database/: create_db.py
src/database/alembic/: env.py
src/database/alembic/versions/: 073205162684_initial_models.py  297b6ece194c_initial_models.py  37c2f64a92bd_initial_models.py  74b80bcca7be_initial_models.py  8c4b09067751_initial_models.py  9508b4709b60_initial_models.py  bec6e28dfc72_initial_models.py  c69c80aaec6d_initial_models.py  d6dc2881b798_initial_models.py
src/database/core/: config.py  db.py
src/database/models/: base.py
src/scripts/: auth.py
src/services/: contest_servic.py  user.py  user_servic.py  user_service.py
src/templates/: base.html  index.html
src/templates/user/: login.html  register.html
